--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-    "engines": {
-        "node": "4.2.1"
-    },
-    "name": "test-game",
-    "version": "0.0.1",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "webpack-dev-server --hot --inline --out-dir=./dist",
-        "test": "set NODE_ENV=test && mocha --recursive --compilers js:babel-core/register --require ./test/setup.js",
-        "test:watch": "npm test -- --watch"
-    },
-    "repository": {
-        "type": "git",
-        "url": ""
-    },
-    "author": "",
-    "homepage": "",
-    "license": "MIT",
-    "dependencies": {
-        "babel": "^5.8.23",
-        "classnames": "^2.2.0",
-        "react": "^0.14.0",
-        "react-dom": "^0.14.0",
-        "react-redux": "^4.0.0",
-        "redux": "^3.0.0",
-        "stylus-loader": "^2.1.1"
-    },
-    "devDependencies": {
-        "babel-loader": "^5.0.0",
-        "babel-plugin-react-transform": "^1.1.0",
-        "expect": "^1.8.0",
-        "express": "^4.13.3",
-        "file-loader": "^0.9.0",
-        "image-webpack-loader": "^1.8.0",
-        "jsdom": "^5.6.1",
-        "node-libs-browser": "^0.5.2",
-        "raw-loader": "^0.5.1",
-        "react-transform-hmr": "^1.0.0",
-        "style-loader": "^0.13.0",
-        "webpack": "^1.11.0",
-        "webpack-dev-middleware": "^1.2.0",
-        "webpack-hot-middleware": "^2.2.0"
-    }
+  "engines": {
+    "node": "4.2.1"
+  },
+  "name": "test-game",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack-dev-server --hot --inline --out-dir=./dist",
+    "test": "set NODE_ENV=test && mocha --recursive --compilers js:babel-core/register --require ./test/setup.js",
+    "test:watch": "npm test -- --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "author": "",
+  "homepage": "",
+  "license": "MIT",
+  "dependencies": {
+    "babel": "^5.8.23",
+    "classnames": "^2.2.0",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.0",
+    "stylus-loader": "^2.1.1"
+  },
+  "devDependencies": {
+    "babel-loader": "^5.0.0",
+    "babel-plugin-react-transform": "^1.1.0",
+    "expect": "^1.8.0",
+    "express": "^4.13.3",
+    "file-loader": "^0.9.0",
+    "image-webpack-loader": "^1.8.0",
+    "jsdom": "^5.6.1",
+    "node-libs-browser": "^0.5.2",
+    "raw-loader": "^0.5.1",
+    "react-transform-hmr": "^1.0.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.11.0",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.2.0"
+  }
 }
